# ShaderWorkshop

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
shader_workshop/: frag.py  server.py  tool.py
shader_workshop/frag-examples/: intro.frag  mouse.frag  noise.frag  shape.frag  srgb.glsl
shader_workshop/www/: index.html  shader.js  style.css
